--- a/requirements.txt
+++ b/requirements.txt
@@ -3,4 +3,6 @@ pywin32
 winpaths
 pyinstaller>=4
 pyperclip
- https://github.com/actlaboratory/proxyutil/archive/0.2.3.zip
+requests
+https://github.com/actlaboratory/proxyutil/archive/0.2.3.zip
+https://github.com/actlaboratory/diff_archiver/archive/v1.0.1.zip
