--- a/requirements.txt
+++ b/requirements.txt
@@ -5,5 +5,6 @@ pyinstaller>=4
 pyperclip
 requests
 bs4
+lxml
 https://github.com/actlaboratory/proxyutil/archive/0.2.3.zip
 https://github.com/actlaboratory/diff_archiver/archive/v1.0.1.zip
