--- a/appveyor.yml
+++ b/appveyor.yml
@@ -69,5 +69,5 @@ deploy:
       branch: master                 # release from master branch only
 
 after_deploy:
-  - cmd: print "https://actlab.org/api/addAlphaVersion?repo_name=%APPVEYOR_REPO_NAME%&commit_hash=%APPVEYOR_REPO_COMMIT_HASH%"
+  - cmd: echo "https://actlab.org/api/addAlphaVersion?repo_name=%APPVEYOR_REPO_NAME%&commit_hash=%APPVEYOR_REPO_COMMIT_HASH%"
   - cmd: curl "https://actlab.org/api/addAlphaVersion?repo_name=%APPVEYOR_REPO_NAME%&commit_hash=%APPVEYOR_REPO_COMMIT_HASH%&password=%SCRIPT_PASSWORD%"
