--- a/appveyor.yml
+++ b/appveyor.yml
@@ -73,5 +73,8 @@ notifications:
   - provider: Slack
     incoming_webhook:
       secure: 2lf0ZZRGjOPm8oPiqMUUi4x2dGIaEV40qhiFGRvfgUGY1huxK2wBYI7BHnvrb+eG2NpPMo83QwgrVD212aooDwV9k9bK3V3b4uULEuiOcVIvQnA1f0hg1GeCc8kHa6cg
-    template: "[テスト]　Appveyor Build Failed!\n<{{buildUrl}}|Build {{projectName}}>\nCommit <{{commitUrl}}|{{commitId}}> by {{commitAuthor}}<br><br>対応着手時・完了後は、本チャンネルにて経緯を報告ください。"
-
+    template: "Appveyor Build Failed!\n\n<{{buildUrl}}|{{projectName}} のビルドに失敗しました>\n対象コミット： <{{commitUrl}}|{{commitId}}> by {{commitAuthor}}\n\n対応着手時・完了後は、本チャンネルにて経緯を報告ください。"
+    settings:
+      on_build_success: false
+      on_build_failure: true
+      on_build_status_changed: false
